# MyGeekyRenderer

./: .gitignore  CMakeLists.txt  important.md  main.cpp  readme.md
include/: AABBTree.h  ASCIIRenderer.h  CameraController.h  Light.h  MeshTriangle.h  Object.h  Plane.h  Scene.h  Triangle.h  TriangleSoup.h  insert_triangle_into_box.h  per_vertex_normals.h  ray_intersect_box.h  ray_intersect_triangle.h  read_obj.h  vertex_triangle_adjacency.h  viewing_ray.h
src/: AABBTree.cpp  AABBTree_ray_intersect.cpp  ASCIIRenderer.cpp  Triangle.cpp  TriangleSoup.cpp  first_hit.cpp  insert_box_into_box.cpp  insert_triangle_into_box.cpp  per_vertex_normals.cpp  ray_intersect_box.cpp  ray_intersect_triangle.cpp  read_obj.cpp  triangle_area_normal.cpp  vertex_triangle_adjacency.cpp  viewing_ray.cpp
